--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 <body>
   
       <div class="main pb-5" id="header">
+        <div class="overlay"></div>
         <div class="container-fluid">
            <a class="navbar-brand ml-4 mt-4" href="#"><img src="./images/glint-logo.png" style="width: 80px;"></a>
            <input type="checkbox" hidden id="openSidebarMenu">
