--- a/index.html
+++ b/index.html
@@ -149,14 +149,14 @@
       <div class="section-2" id="services">
         <div class="container">
           <h2 class="hed-sec-2 text-center mt-4">What we do</h2>
-          <h1 class="sec-2-para">We’ve got everything you need to <br>launch and grow your business</h1>
+          <h1 class="sec-2-para text-center">We’ve got everything you need to launch and grow your business</h1>
           <hr class="custom-hr">
           <div class="row">
             <div class="col-md-6 d-md-flex">
               <div class="service-icon">
                 <i class="fa fa-paint-brush" aria-hidden="true"></i>
               </div>
-              <div class="service-text mr-5">
+              <div class="service-text">
                 <h2>Brand Identity</h2>
                 <p>Nemo cupiditate ab quibusdam quaerat impedit magni. Earum suscipit ipsum laudantium. Quo delectus est. Maiores voluptas ab sit natus veritatis ut. Debitis nulla cumque veritatis. Sunt suscipit voluptas ipsa in tempora esse soluta sint.</p>
               </div>
@@ -216,7 +216,7 @@
       <div class="section-3" id="works">
         <div class="container">
           <h2 class="hed-sec-2 text-center mt-4">RECENT WORKS</h2>
-          <h1 class="sec-2-para m-auto text-center">We love what we do, check out <br>some of our latest works</h1>
+          <h1 class="sec-2-para m-auto text-center">We love what we do, check out some of our latest works</h1>
           <hr class="custom-hr">
           <div class="row">
             <div class="column px-0">
@@ -316,11 +316,11 @@
                 
               </div>
             </div>
-            <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+            <a class="carousel-control-prev d-none d-md-block" href="#carouselExampleControls" role="button" data-slide="prev">
               <span class="fa fa-long-arrow-left" aria-hidden="true"></span>
               <span class="sr-only">Previous</span>
             </a>
-            <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+            <a class="carousel-control-next d-none d-md-block" href="#carouselExampleControls" role="button" data-slide="next">
               <span class="fa fa-long-arrow-right" aria-hidden="true"></span>
               <span class="sr-only">Next</span>
             </a>
@@ -331,7 +331,7 @@
       <div class="section-5" id="contacts">
         <div class="container">
           <h2 class="hed-sec-2 text-center mt-5">CONTACT US</h2>
-          <h1 class="sec-2-para m-auto text-center mb-3">Reach out for a new project or just<br> say hello </h1>
+          <h1 class="sec-2-para m-auto text-center mb-3">Reach out for a new project or just say hello </h1>
           <div class="row mt-5">
             <div class="col-md-8">
               <div class="contact-content">
@@ -393,11 +393,11 @@
             <div class="row">
               <div class="col-md-6 ">
                 <h3>Glint.</h3>
-                <p class="para-content">Proin eget tortor risus. Mauris blandit aliquet elit, eget<br> tincidunt nibh pulvinar a. Praesent sapien massa, convallis<br> a pellentesque nec, egestas non nisi. Mauris blandit<br> aliquet elit, eget tincidunt nibh pulvinar a. Nulla porttitor<br> accumsan tincidunt. Nulla porttitor accumsan tincidunt<br>. Quaerat voluptas autem necessitatibus vitae aut.</p>
+                <p class="para-content">Proin eget tortor risus. Mauris blandit aliquet elit, eget tincidunt nibh pulvinar a. Praesent sapien massa, convallis a pellentesque nec, egestas non nisi. Mauris blandit aliquet elit, eget tincidunt nibh pulvinar a. Nulla porttitor accumsan tincidunt. Nulla porttitor accumsan tincidunt. Quaerat voluptas autem necessitatibus vitae aut.</p>
               </div>
               <div class="col-md-6">
                 <h4>Get Notified</h4>
-                <p class="para-content mt-4">Quia quo qui sed odit. Quaerat voluptas autem necessitatibus <br>vitae aut non alias sed quia. Ut itaque enim optio ut excepturi <br>deserunt iusto porro.</p>
+                <p class="para-content mt-4">Quia quo qui sed odit. Quaerat voluptas autem necessitatibus vitae aut non alias sed quia. Ut itaque enim optio ut excepturi deserunt iusto porro.</p>
                 <div class="input-group mb-3 mt-4">
                   <div class="input-group-prepend">
                     <span class="input-group-text">
