responsiveness issues fixed

--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
       <div class="section-4" id="clients">
         <div class="container">
           <h2 class="hed-sec-2 text-center mt-4">our clients</h2>
-          <h1 class="sec-2-para m-auto text-center">Glint has been honored to partner up with these clients</h1>
+          <h1 class="sec-2-para m-auto ">Glint has been honored to partner up with these clients</h1>
          
 
             <div id="myCarousel" class="owl-carousel mt-5">
