--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
           </div>
           <div class="row ">
               <div class="col-md-8 col-12">
-                  <div class="header-content">          
+                  <div class="header-content text-center">          
                       <h3>Welcome to Glint</h3>
                       <h1>     We are a creative group
                           of people who design
