contact us section fix

--- a/index.html
+++ b/index.html
@@ -279,8 +279,8 @@
               <div class="carousel-item active">
                 <div class="carousel-item-content text-center">
                   <h1>Repellat dignissimos libero. Qui sed at corrupti expedita voluptas odit. Nihil ea quia nesciunt. Ducimus aut sed ipsam. Autem eaque officia cum exercitationem sunt voluptatum accusamus. Quasi voluptas eius distinctio.</h1>
-                  <div class="profile-img">
-                    <img src="./images/user-02.jpg..webp">
+                  <div class="profile-img mt-5 mb-3">
+                    <img src="./images/user-02.jpg..webp ">
                   </div>
                   <div class="profile-title">
                     <h3>Satya Nadella</h3>
@@ -291,7 +291,7 @@
               <div class="carousel-item ">
                 <div class="carousel-item-content text-center">
                   <h1>Qui ipsam temporibus quisquam vel. Maiores eos cumque distinctio nam accusantium ipsum. Laudantium quia consequatur molestias delectus culpa facere hic dolores aperiam. Accusantium quos qui praesentium corpori. Excepturi nam cupiditate culpa doloremque deleniti repellat.</h1>
-                  <div class="profile-img">
+                  <div class="profile-img mt-5 mb-3">
                     <img src="./images/user-2.jpg">
                   </div>
                   <div class="profile-title">
@@ -305,11 +305,12 @@
               <div class="carousel-item ">
                 <div class="carousel-item-content text-center">
                   <h1>Excepturi nam cupiditate culpa doloremque deleniti repellat. Veniam quos repellat voluptas animi adipisci. Nisi eaque consequatur. Quasi voluptas eius distinctio. Atque eos maxime. Qui ipsam temporibus quisquam vel..</h1>
-                  <div class="profile-img">
+                  <div class="profile-img mt-5 mb-3">
                     <img src="./images/user-05.jpg">
                   </div>
                   <div class="profile-title">
                     <h3>Sundar Pirchai</h3>
+                    <h5>CEO,Google</h5>
                   </div>
 
                 </div>
@@ -334,7 +335,7 @@
           <h1 class="sec-2-para m-auto text-center mb-3">Reach out for a new project or just say hello </h1>
           <div class="row mt-5">
             <div class="col-md-8">
-              <div class="contact-content">
+              <div class="contact-content ml-3">
                 <h3>send us a message</h3>
                 <form class="mt-5">
                   <div class="form-group">
@@ -374,7 +375,7 @@
                   <h5>Fax: (+63) 555 0101</h5>
                 </div>
               </div>
-              <div class="social-icons mt-5">
+              <div class="social-icons mt-5 ">
                 <i class="fa fa-facebook " aria-hidden="true"></i>
                 <i class="fa fa-instagram " aria-hidden="true"></i>
                 <i class="fa fa-twitter" aria-hidden="true"></i>
