second section border space added

--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
             <div class="col-lg-3 col-sm-6 col-stats">
               <div class="stats-content stats-109 text-center">
                 <div class="stats-count">109</div>
-                <h3>Projects Completed</h3>
+                <h3 class="mb-3">Projects Completed</h3>
                 <hr class="custom-border ">
               </div>
            
@@ -335,7 +335,7 @@
           <h1 class="sec-2-para m-auto text-center mb-3">Reach out for a new project or just say hello </h1>
           <div class="row mt-5">
             <div class="col-md-8">
-              <div class="contact-content ml-3">
+              <div class="contact-content mx-4">
                 <h3>send us a message</h3>
                 <form class="mt-5">
                   <div class="form-group">
